# pitstop

./: Cargo.toml  README.md
src/: app.rs  ipc.rs  main.rs  style.rs  util.rs
src/components/: focus.rs  list.rs  mod.rs  search.rs
src/components/list/: command.rs  mod.rs
src/components/list/providers/: mod.rs
